fixed a img alignment

--- a/src/Components/Home/SpeciallizationPart/SpecializationPart.css
+++ b/src/Components/Home/SpeciallizationPart/SpecializationPart.css
@@ -14,7 +14,7 @@
     position: absolute;
     width:80px;
     height:80px;
-    align-items: center;
+    justify-content: center;
 }
 
 
